--- a/Docs/model.tex
+++ b/Docs/model.tex
@@ -1,7 +1,9 @@
 \input{header.tex}
 
 
-\title{Migrant Workers Residential Dynamics within a Mega-city Region: Challenging Preconceived Ideas with an Agent-based Model\bigskip\\
+\title{Agent-based Modeling of Migrant Workers Residential Dynamics within a Mega-city Region: the Case of Zhuijiang Delta, China
+%Challenging Preconceived Ideas with an Agent-based Model
+\bigskip\\
 \textit{Working Paper}
 }
 \author{\noun{Cinzia Losavio} and \noun{Juste Raimbault}\\
@@ -16,7 +18,11 @@ UMR CNRS 8504 Géographie-cités
 
 
 \begin{abstract}
+Rural-urban migrant workers have played in the last decades an increasing role for China's economy, raising the attention on associated socio-economical issues. The importance of their economic diversity is however poorly known, as the strategy of the State towards these new classes. We propose to investigate both by means of agent-based modeling, at the scale of Pearl River Delta Mega-city Region. Our model couples patch-level population and economic structure, which evolution is determined in a top-down fashion from meso-dynamics following simple growth rules, with microscopic residential discrete choices dynamics of migrant workers. This two level structure is essential to control on city system structure. The model is explored on synthetic data and internally validated for statistical consistence and path-dependancy of temporal trajectories. The application to Zhuijiang Delta region allows first to test the sensitivity of outcomes to population economic structure, for which spread wealth distributions yield more complex trajectories, and secondly to compare the impact of different State policies on migration control.
 
+\bigskip
+
+\noindent\textbf{Keywords : } \textit{Mingong ; Residential Dynamics ; Agent-based Modeling ; Zhuijiang Delta Mega-city Region}
 \end{abstract}
 
 
@@ -131,7 +137,7 @@ Residential movement is drawn randomly according to these probabilities, and job
 %%%%%%%%%%%%%%%%%%%%
 
 \bibliographystyle{apalike}
-\bibliography{/Users/Juste/Documents/ComplexSystems/Mingong/Biblio/mingong}
+\bibliography{/Users/Juste/Documents/ComplexSystems/MigrationDynamics/Biblio/mingong}
 
 
 \end{document}
