--- a/Docs/MediumSeminar/header.tex
+++ b/Docs/MediumSeminar/header.tex
@@ -135,6 +135,26 @@
 
 
 
+% comments and responses
+\usepackage{xparse}
+\DeclareDocumentCommand{\comment}{m o o o o}
+{%
+    \textcolor{red}{#1}
+    \IfValueT{#2}{\textcolor{blue}{#2}}
+    \IfValueT{#3}{\textcolor{ForestGreen}{#3}}
+    \IfValueT{#4}{\textcolor{red!50!blue}{#4}}
+    \IfValueT{#5}{\textcolor{Aquamarine}{#5}}
+}
+
+
+% todo
+\newcommand{\todo}[1]{\textcolor{red!50!blue}{\textbf{\textit{#1}}}}
+
+
+
+
+
+
 % geometry
 \usepackage[margin=2cm]{geometry}
 
