--- a/Docs/MediumSeminar/abstract.tex
+++ b/Docs/MediumSeminar/abstract.tex
@@ -23,12 +23,12 @@
 
 \vspace{1cm}
 
-\textbf{Keywords : }\textit{Mingong ; Residential Dynamics ; Agent-based Modeling ; Pearl River Delta Mega-city Region}
+\textbf{Keywords : }\textit{Rural-urban Migrant Workers ; Agent-based Modeling ; Residential Dynamics ; Pearl River Delta Mega-city Region}
 
 \vspace{1.5cm}
 
 
-Over the last three decades, rural-urban migrant-workers have been a driving force for China's economy, raising attention on associated socio-economical issues. However, the importance of their socio-economic diversity and social mobility has been poorly taken into account in the analysis of urban development strategy.
+Over the last three decades, rural-urban migrant-workers have been a driving force for China's economy, raising attention on associated socio-economical issues. However, the importance of their economic diversity and social mobility has been poorly considered in the analysis of urban development strategy.
 We use an agent-based model to simulate residential dynamics of migrants in Pearl River Delta (PRD) mega city region, taking into account the full range of migrants’ socio-economical status and their evolution. Mega-city regions have become a new scale of Chinese State regulation, and PRD represent the most prosperous and dynamic one in term of migration waves, standing as an ideal unit of analysis.
 Our model unveils emergent patterns of dynamics, from micro behavior rules of discrete mobility choices. These choices are conditional to urban and economic environment, which evolution is controlled by meso-scale independent dynamics.
 The two scales are coupled through the dependance of discrete choice utilities to generalized accessibility that combines patch-level urban and economic context with a feedback of the dynamics themselves.
