--- a/Docs/WorkingPaper/header.tex
+++ b/Docs/WorkingPaper/header.tex
@@ -133,7 +133,7 @@
 %\renewcommand{\abstractname}{}
 
 
-
+\newcommand{\cinzia}[1]{\textcolor{red}{\textbf{\textit{#1}}}}
 
 % comments and responses
 \usepackage{xparse}
@@ -152,6 +152,7 @@
 
 
 
+%\usepackage[UTF8]{ctex}
 
 
 
