--- a/Biblio/mingong.bib
+++ b/Biblio/mingong.bib
@@ -9,6 +9,70 @@
 
 
 
+
+@article{wilensky1999netlogo,
+	Author = {Wilensky, Uri},
+	Title = {NetLogo},
+	Year = {1999}}
+
+
+@article{gottman1961megalopolis,
+  title={Megalopolis},
+  author={Gottman, Jean},
+  journal={Twentieth Century Fund},
+  year={1961}
+}
+
+
+
+@article{florida2008rise,
+  title={The rise of the mega-region},
+  author={Florida, Richard and Gulden, Tim and Mellander, Charlotta},
+  journal={Cambridge Journal of Regions, Economy and Society},
+  volume={1},
+  number={3},
+  pages={459--476},
+  year={2008},
+  publisher={Oxford University Press}
+}
+
+
+@article{cottineau2015incremental,
+	Author = {Cottineau, Cl{\'e}mentine and Chapron, Paul and Reuillon, Romain},
+	Title = {An incremental method for building and evaluating agent-based models of systems of cities},
+	Year = {2015}}
+
+
+
+@article{reuillon2013openmole,
+	Author = {Reuillon, Romain and Leclaire, Mathieu and Rey-Coyrehourcq, Sebastien},
+	Journal = {Future Generation Computer Systems},
+	Number = {8},
+	Pages = {1981--1990},
+	Title = {OpenMOLE, a workflow engine specifically tailored for the distributed exploration of simulation models},
+	Volume = {29},
+	Year = {2013}}
+
+@article{schmitt2014half,
+	Author = {Schmitt, Clara and Rey-Coyrehourcq, S{\'e}bastien and Reuillon, Romain and Pumain, Denise},
+	Title = {Half a billion simulations: Evolutionary algorithms and distributed computing for calibrating the SimpopLocal geographical model},
+	Year = {2014}}
+
+
+
+@article{grimm2005pattern,
+	Author = {Grimm, Volker and Revilla, Eloy and Berger, Uta and Jeltsch, Florian and Mooij, Wolf M and Railsback, Steven F and Thulke, Hans-Hermann and Weiner, Jacob and Wiegand, Thorsten and DeAngelis, Donald L},
+	Journal = {science},
+	Number = {5750},
+	Pages = {987--991},
+	Title = {Pattern-oriented modeling of agent-based complex systems: lessons from ecology},
+	Volume = {310},
+	Year = {2005}}
+
+
+
+
+
 @article{raimbault2016calibration,
 	Author = {J. Raimbault},
 	Date-Added = {2016-11-28 08:48:06 +0000},
