--- a/Docs/MediumSeminar/Communication/migration.tex
+++ b/Docs/MediumSeminar/Communication/migration.tex
@@ -214,6 +214,10 @@ synthetic data only for now
 
 next steps : real land use data ; exploration of policies etc. 
 
+impact of varying economic structure
+
+Strategies de l'etat via : entreprises ; hukou policies
+
 }
 
 
@@ -268,6 +272,23 @@ where $Z_i^{(c)}$ is generalized accessibility given by $Z_i^{(c)} = P_i \cdot \
 
 }
 
+
+\sframe{Biblio}{
+
+
+\cite{grimm2005pattern}
+
+\cite{reuillon2013openmole,schmitt2014half}
+
+\cite{cottineau2015incremental}
+
+\cite{florida2008rise}
+
+\cite{gottman1961megalopolis}
+
+\cite{wilensky1999netlogo}
+
+}
 
 
 
