--- a/Biblio/mingong.bib
+++ b/Biblio/mingong.bib
@@ -9,6 +9,15 @@
 
 
 
+
+
+@misc{fu1km,
+	Author = {FU, Jingying and JIANG, Dong and HUANG, Yaohuan},
+	Title = {km grid population dataset of China (2005, 2010). Global Change Research Data Publishing and Repository, 2014. DOI: 10.3974/geodb. 2014.01. 06. v1},
+	Year = {1}}
+
+
+
 @article{wilensky1999netlogo,
 	Author = {Wilensky, Uri},
 	Title = {NetLogo},
