--- a/Docs/UrbanChina17/Communication/migration.tex
+++ b/Docs/UrbanChina17/Communication/migration.tex
@@ -71,9 +71,9 @@
 
 \setbeamertemplate{footline}{
 \hspace{0.2cm}
-\includegraphics[height=0.75cm]{template/medium}
+%\includegraphics[height=0.75cm]{template/medium}
 \hfill
-\includegraphics[height=0.75cm]{template/eu}
+%\includegraphics[height=0.75cm]{template/eu}
 \hspace{0.15cm}
 \vspace{0.15cm}
 }
@@ -132,7 +132,7 @@ $^{2}$UMR-T IFSTTAR 9403 LVMT\\
 }
 
 
-\frame{\maketitle}
+%\frame{\maketitle}
 
 }
 
@@ -287,6 +287,19 @@ where $Z_i^{(c)}$ is generalized accessibility given by $Z_i^{(c)} = P_i \cdot \
 \cite{gottman1961megalopolis}
 
 \cite{wilensky1999netlogo}
+
+\cite{zhang2013measuring}
+\cite{fan2005modeling}
+\cite{zhang2003rural}
+
+\cite{de2007netlogo}
+
+\cite{xie2007simulating}
+\cite{silveira2006agent}
+\cite{fernandez2005characterizing} 
+
+\cite{fu1km}
+
 
 }
 
