--- a/Docs/UrbanChina17/Abstract/abstract.tex
+++ b/Docs/UrbanChina17/Abstract/abstract.tex
@@ -1,8 +1,14 @@
 \input{header.tex}
 
 
-\title{Agent-based Modeling of Migrant Workers Residential Dynamics within a Mega-city Region: the Case of Pearl River Delta, China
-}\bigskip
+\title{Agent-based Modeling of Migrant Workers Residential Dynamics within a Mega-city Region: the Case of Pearl River Delta, China\\
+\bigskip\bigskip
+\textit{2017 International Conference on China Urban Development}\\
+\textit{London, 5-6th May 2017}
+}
+
+\bigskip
+\bigskip
 \bigskip
 \author{\noun{Cinzia Losavio}$^{1}$ and \noun{Juste Raimbault}$^{1,2}$\\
 \small(1) UMR CNRS 8504 Géographie-cités and (2) UMR-T IFSTTAR 9403 LVMT
